[project]
name = "kevinbotlib-cns"
version = "0.1.0"
description = "KevinbotLib Communication and Networking Service"
requires-python = ">=3.10"
dependencies = [
    "websockets~=15.0.1",
    "fastapi~=0.122.0",
    "uvicorn~=0.38.0",
    "loguru~=0.7.3",
    "orjson~=3.11.4"
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
]
